# smart-mobile-robot-planner

./: README.md
interactive_local_planner_simulated_obstacle/: CMakeLists.txt  package.xml
interactive_local_planner_simulated_obstacle/nodes/: obstacle_controller.py
pomdp_planner/: CMakeLists.txt  HumanRobotPOMDP.jl  package.xml  test.jl  test_ros.jl  turtlebot_grid_world.jl
pomdp_planner/julia/: test_cairo.jl  test_grid_world.jl  test_gtk.jl  turtlebot_communication.jl  turtlebot_grid_world.jl
pomdp_planner/launch/: planner.launch
pomdp_planner/scripts/: start.sh
turtlebot_controller/: CMakeLists.txt  package.xml  setup.py
turtlebot_controller/action/: TurtleBotMovement.action
turtlebot_controller/nodes/: controller_node
turtlebot_controller/src/turtlebot_controller/: controller.py  gazebo_interface.py
turtlebot_gazebo_room/: CMakeLists.txt  package.xml  setup.py
turtlebot_gazebo_room/launch/: spawn_obstacles.launch  spawn_room.launch  turtlebot_gazebo.launch
turtlebot_gazebo_room/launch/includes/: spawn_obstacle.launch.xml
turtlebot_gazebo_room/models/moving_obstacle/: model.sdf
turtlebot_gazebo_room/nodes/: obstacle_controller  static_obstacle_tf_publisher.py
turtlebot_gazebo_room/scripts/: turtlebot_spawner.sh
turtlebot_gazebo_room/src/interactive_local_planner_simulated_obstacle/: moving_obstacle_controller.py  obstacle_pose_publisher.py
turtlebot_gazebo_room/src/turtlebot_gazebo_room/: gazebo_interface.py  moving_obstacle_controller.py  util.py
